objects/TW1_Custas__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Caso_Associado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso Associado</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Custas (Caso Associado)</relationshipLabel>
        <relationshipName>Custas_Caso_Associado</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Caso__c</fullName>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Custas</relationshipLabel>
        <relationshipName>Custas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao__c</fullName>
        <label>Descrição</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo_Custa__c</fullName>
        <label>Tipo Custa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certidões</fullName>
                </value>
                <value>
                    <fullName>Condominio/IPTU</fullName>
                </value>
                <value>
                    <fullName>Conf. de Dívida</fullName>
                </value>
                <value>
                    <fullName>Despachante</fullName>
                </value>
                <value>
                    <fullName>Despesas Extrajudiciais</fullName>
                </value>
                <value>
                    <fullName>Despesas judiciais</fullName>
                </value>
                <value>
                    <fullName>Devolução de cliente</fullName>
                </value>
                <value>
                    <fullName>Diferença de contrato</fullName>
                </value>
                <value>
                    <fullName>Encargos</fullName>
                </value>
                <value>
                    <fullName>Honorários Advocatícios</fullName>
                </value>
                <value>
                    <fullName>Interveniência</fullName>
                </value>
                <value>
                    <fullName>ITBI</fullName>
                </value>
                <value>
                    <fullName>Laudêmio</fullName>
                </value>
                <value>
                    <fullName>Lavratura</fullName>
                </value>
                <value>
                    <fullName>Manutenção</fullName>
                </value>
                <value>
                    <fullName>Modificação</fullName>
                </value>
                <value>
                    <fullName>Opção de acabamento</fullName>
                </value>
                <value>
                    <fullName>Rateio</fullName>
                </value>
                <value>
                    <fullName>Receita Financeira</fullName>
                </value>
                <value>
                    <fullName>Registro</fullName>
                </value>
                <value>
                    <fullName>Serviços complementares</fullName>
                </value>
                <value>
                    <fullName>Vaga de garagem</fullName>
                </value>
                <value>
                    <fullName>Sem Custas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Vencimento__c</fullName>
        <label>Vencimento</label>
        <type>Date</type>
    </fields>
    <label>Custa</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Custa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>